
#------------------------------------
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-30
2022-04-26 Mikhail Dubrovin
modified:
   app/dcs - add repoman.save_record_at_start, save files in ctype-dependent format
   src/DCMethods.py - in get_constants search for constants in experiment/local calib then in global repo
   src/DCRange.py - code cleaning
   src/DCStore.py - code cleaning
   src/DCType.py - code cleaning, simplify search for range end
   src/DCUtils.py - code cleaning - add os.umask(umask) in create_directory
   src/DCVersion.py - code cleaning

Tag: V02-00-29
2022-04-20 Mikhail Dubrovin
- src/GenericCalibPars.py - set default epix100a gain 0.06 keV/ADU since evt time 1650524400 sec for 2022-04-21 00:00

Tag: V02-00-28
2022-03-22 Mikhail Dubrovin
   src/CalibPars.py - code cleaning
   src/GeometryAccess.py - add method info_list_of_geos
   src/GeometryObject.py - add metho info_geo
   src/GlobalUtils.py - Add list_of_det_names_lower, dic_det_name_to_type,
	dic_det_tname_lower_to_calib_group, log_rec_at_start

Tag: V02-00-27
2022-02-24 Mikhail Dubrovin
- GlobalUtils.py - replace len(a.shape) with a.ndim
- CalibParsBaseCSPad2x2V1.py - code cleaning
- CalibParsBaseEpix100aV1.py - code cleaning
- CalibParsBaseEpix10kaV1.py - code cleaning
- Use universal parameters in
	pixel_mask_array(sp, mbits=0o377, width=1, wcentral=1, **kwa)
  - SegGeometryCspad2x1V1.py
  - SegGeometryEpix100V1.py
  - SegGeometryEpix10kaV1.py
  - SegGeometryEpix10kaV2.py
  - SegGeometryJungfrauV1.py
  - SegGeometryJungfrauV2.py

Tag: V02-00-26
2022-01-25 Mikhail Dubrovin
- src/GlobalUtils.py - change default chmod parameters, add os.umask(0o0)

Tag: V02-00-25
2022-01-05 Mikhail Dubrovin
- src/UtilsPSF.py - fix py3 issue - use int for devision in other place

Tag: V02-00-24
2022-01-06 Mikhail Dubrovin